# bluedot-2024-scalable-debate

./: README.md  mkdocs.yml  pyproject.toml
docs/: api.md  installation.md  usage.md
html/: README.md  debate.html
src/llm_vs_llm_debate_toolkit/: cli.py  debate.py
tests/: test_llm_vs_llm_debate_toolkit.py
