[tool]
[tool.poetry]
name = "llm_vs_llm_debate_toolkit"
version = "0.1.0"
description = "Framework for running multi-turn debate between LLMs."
authors = ["William Grant <hello@wpg.io>"]
readme = "README.md"
packages = [
    { include = "llm_vs_llm_debate_toolkit", from = "src" }
]


[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
black = {version = "^21.9b0", optional = true}
isort = {version = "^5.9.3", optional = true}
flake8 = {version = "^3.9.2", optional = true}
pre-commit = {version = "^2.12.0", optional = true}
pytest = {version = "^6.2.5", optional = true}
mkdocs = {version = "^1.6.0", optional = true}
mkdocs-include-markdown-plugin = {version = "^6.0.6", optional = true}
mkdocs-material = {version = "^9.5.24", optional = true}
mkdocstrings = {version = "^0.25.0", optional = true}
mkdocstrings-python = {version = "^1.10.3", optional = true}
mkdocs-material-extensions = {version = "^1.1.1", optional = true}

# project deps
colorama = "^0.4.6"
llm = "^0.15"
pydantic = "^2.8.2"


[tool.poetry.extras]
dev = [
    "black", "isort", "flake8",
    "pre-commit",
    "pytest",
    "mkdocs", "mkdocs-include-markdown-plugin",
    "mkdocs-material", "mkdocstrings", "mkdocstrings-python", "mkdocs-material-extensions"
    
    ]

[tool.poetry.scripts]
llm-vs-llm-debate-toolkit = 'llm_vs_llm_debate_toolkit.cli:main'


[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
